# -mathsh

./: .gitignore  README.md  pyproject.toml
mathsh/: challenge.py  display.py  executor.py  shell.py
